async load image from url

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,4 +18,12 @@
             </intent-filter>
         </activity>
     </application>
+
+    <supports-screens
+        android:smallScreens="true"
+        android:normalScreens="true"
+        android:largeScreens="true"
+        android:resizeable="true"
+        android:anyDensity="true"
+        />
 </manifest>
