--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,7 @@
       <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> 
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@android:style/Theme.Light.NoTitleBar">
-        <activity android:name="WelcomeActivity"
+        <activity android:name="MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
